--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,5 +1,7 @@
 :root {
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono",
     "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-  --card-border-rgb: 131, 134, 135;
+}
+.rounded-full {
+  border-radius: 100%;
 }
